# MPPEEP

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DOCKER.md  ARCHITECTURE_WORKFLOWS.md  BESOINS_AGENTS_SYSTEM.md  BUDGET_SYSTEM.md  CHANGELOG_FILES.md  CHARTE_CONFIDENTIALITE.md  CI_CD_SETUP.md  DATABASE_INITIALIZATION.md  DEPLOIEMENT_USB.md  DEPLOYMENT_CLOUDFLARE.md  DOCKER_BUILD_PIPELINE.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.uv  ERROR_HANDLING_SYSTEM.md  EXPLICATION_FONCTIONNEMENT_WORKFLOWS.md  FILE_MANAGEMENT_SYSTEM.md  FINAL_SUMMARY.md  GUIDE_ATTRIBUTION_ROLES.md  HELP_SYSTEM.md  IMPLEMENTATION_FILES_SUMMARY.md  LOGGING_QUICKSTART.md  LOGGING_SUMMARY.md  MAKEFILE_GUIDE.md  Makefile  NAVIGATION_LOADING.md  PAGES_LEGALES.md  PERSONNEL_SYSTEM.md  PHOTO_UPLOAD_SYSTEM.md  QUICKSTART.md  QUICK_START.md  QUICK_START_FILES.md  README.md  REFERENTIELS_SYSTEM.md  (+31 more)
.github/: CICD_README.md  SETUP_GITHUB_ACTIONS.md
app/: cloudflare_tunnel.py  main.py
deploiement_docker/: DEMARRAGE_RAPIDE_DOCKER.md  DEPLOIEMENT_DOCKER_SIMPLE.md  build-docker-prod.ps1  update-docker.ps1
deploy/: QUICKSTART.md  README.md
docker/: DOCKER_COMMANDS.md  DOCKER_COMPLETE.md  QUICKSTART.md  README.md  env.docker.example
documentation/: 00_START_HERE.md  01_DEMARRAGE_APPLICATION.md  02_PARCOURS_REQUETE_CLIENT.md  03_MODULES_DETAILS.md  04_MODULES_FRONTEND_API.md  05_ARCHITECTURE_COMPLETE.md  06_DOCKER_DEPLOYMENT.md  07_CODE_QUALITY.md  CICD_VS_DEPLOY.md  CLOUDFLARE_PIPELINE.md  DEPLOYMENT.md  FEATURES.md  INDEX.md  README.md  (+3 more)
(+283 files in other folders)
