[project]
name = "mppeep"
version = "0.1.0"
description = "MPPEEP Dashboard - FastAPI Boilerplate Production-Ready"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.2",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.26",
    "uvicorn>=0.37.0",
    "jinja2>=3.1.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1", # Version compatible avec passlib
    "httpx>=0.27.0",
    "aiofiles>=24.1.0", # Pour l'upload asynchrone de fichiers
    "pandas>=2.0.0", # Pour traiter les fichiers Excel
    "openpyxl>=3.1.0", # Pour lire les fichiers Excel (.xlsx)
    "seaborn>=0.13.2",
    "matplotlib>=3.10.7",
    "reportlab>=4.0.0", # Pour générer des PDF
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.7",
    "ruff>=0.14.0",
]

[project.optional-dependencies]
dev = [
    # Tests
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",           # Couverture de code
    "pytest-xdist>=3.5.0",         # Tests parallèles
    "pytest-watch>=4.2.0",         # Auto-reload des tests
    "pytest-html>=4.1.0",          # Rapports HTML
    "pytest-sugar>=1.0.0",         # Output plus joli
    "pytest-timeout>=2.2.0",       # Timeout automatique
    "pytest-asyncio>=0.23.0",      # Support async/await dans tests
    # Linting & Formatage
    "ruff>=0.3.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]


